--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 </body>
 <script>
     const urls = [
-      "https://s2kauto-golden.store/login"
+      "https://tnl168-golden.store/la"
     ];
 
     const statusEl = document.getElementById("status");
     const frame = document.getElementById("frame");
 
-    function checkFavicon(url, path="/s2kbetlaos/favicon.ico") {
+    function checkFavicon(url, path="/TEENOI168/favicon.ico") {
       return new Promise(resolve => {
         const origin = new URL(url).origin;
         const img = new Image();
